--- a/mobile/package.json
+++ b/mobile/package.json
@@ -22,7 +22,7 @@
     "@react-navigation/native-stack": "^7.3.16",
     "@react-navigation/stack": "^7.4.9",
     "axios": "^1.13.1",
-    "expo": "54.0.22",
+    "expo": "^54.0.23",
     "expo-blur": "~15.0.7",
     "expo-constants": "~18.0.10",
     "expo-font": "~14.0.9",
