--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,15 +1,13 @@
 {
   "name": "mobile",
-  "main": "node_modules/expo/AppEntry.js",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
     "start": "expo start",
-    "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
-    "lint": "expo lint",
-    "build": "expo export -p web --non-interactive"
+    "build": "CI=1 expo export -p web --output-dir public"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
@@ -53,6 +51,5 @@
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
     "typescript": "~5.9.2"
-  },
-  "private": true
+  }
 }
