--- a/mobile/package.json
+++ b/mobile/package.json
@@ -7,7 +7,7 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "build": "CI=1 expo export -p web --output-dir public"
+    "build": "CI=1 expo export -p web --output-dir dist"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
